gwt/src/main/resources/org/jahia/ajax/gwt/public/css/jahia-ext-all.css
/*
 * Ext GWT Library 2.0.4
 * Copyright(c) 2006-2009, Ext JS, LLC.
 * licensing@extjs.com
 *
 * http://extjs.com/license
 */
html,body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,p,blockquote,th,td{margin:0;padding:0;}img,body,html{border:0;}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}ol,ul {list-style:none;}caption,th {text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;}q:before,q:after{content:'';}
.ext-el-mask {
    z-index: 100;
    position: absolute;
    top:0;
    left:0;
    -moz-opacity: 0.5;
    opacity: .50;
    filter: alpha(opacity=50);
    width: 100%;
    height: 100%;
    zoom: 1;
}
.ext-el-mask-msg {
    z-index: 101;
    position: absolute;
    top: 0;
    left: 0;
    border:1px solid;
    background:repeat-x 0 -16px;
    padding:2px;
}
.ext-el-mask-msg div {
    padding:5px 10px 5px 10px;
    border:1px solid;
    cursor:wait;
}
.ext-webkit *:focus{
    outline: none !important;
}
.ext-shim {
    position:absolute;
    visibility:hidden;
    left:0;
    top:0;
    overflow:hidden;
}
.ext-ie .ext-shim {
    filter: alpha(opacity=0);
}
.ext-ie6 .ext-shim {
    margin-left: 5px;
    margin-top: 3px;
}
.x-mask-loading div {
    padding:5px 10px 5px 25px;
    background:no-repeat 5px 5px;
    line-height:16px;
}
.x-hidden, .x-hide-offsets {
    position:absolute;
    left:-10000px;
    top:-10000px;
    visibility:hidden;
}
.x-hide-display {
    display:none !important;
}
.x-hide-visibility {
    visibility:hidden !important;
}
.x-masked {
    overflow: hidden !important;
}
.x-masked-relative {
    position: relative !important;
}
.x-masked select, .x-masked object, .x-masked embed {
    visibility: hidden;
}
.x-layer {
    visibility: hidden;
}
.x-unselectable, .x-unselectable * {
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: ignore;
}
.x-repaint {
    zoom: 1;
    background-color: transparent;
    -moz-outline: none;
}
.x-item-disabled {
    cursor: default;
    opacity: .6;
    -moz-opacity: .6;
    filter: alpha(opacity=60);
}
.x-item-disabled * {
	cursor: default !important;
}
.x-splitbar-proxy {
    position: absolute;
    visibility: hidden;
    z-index: 20001;
    zoom: 1;
    line-height: 1px;
    font-size: 1px;
    overflow: hidden;
}
.x-splitbar-h, .x-splitbar-proxy-h {
    cursor: e-resize;
    cursor: col-resize;
}
.x-splitbar-v, .x-splitbar-proxy-v {
    cursor: s-resize;
    cursor: row-resize;
}
.x-color-palette {
    width: 150px;
    height: 92px;
    cursor: pointer;
}
.x-color-palette a {
    border: 1px solid;
    float: left;
    padding: 2px;
    text-decoration: none;
    -moz-outline: 0 none;
    outline: 0 none;
    cursor: pointer;
}
.x-color-palette a.x-color-palette-hover, .x-color-palette a.x-color-palette-sel {
    border: 1px solid;
}
.x-color-palette em {
    display: block;
    border: 1px solid;
}
.x-color-palette em span {
    cursor: pointer;
    display: block;
    height: 10px;
    line-height: 10px;
    width: 10px;
}
.x-ie-shadow {
    display: none;
    position: absolute;
    overflow: hidden;
    left:0;
    top:0;
    zoom:1;
}
.x-shadow {
    display: none;
    position: absolute;
    overflow: hidden;
    left:0;
    top:0;
}
.x-shadow * {
    overflow: hidden;
}
.x-shadow * {
    padding: 0;
    border: 0;
    margin: 0;
    clear: none;
    zoom: 1;
}
.x-shadow .xstc, .x-shadow .xsbc {
    height: 6px;
    float: left;
}
.x-shadow .xstl, .x-shadow .xstr, .x-shadow .xsbl, .x-shadow .xsbr {
    width: 6px;
    height: 6px;
    float: left;
}
.x-shadow .xsc {
    width: 100%;
}
.x-shadow .xsml, .x-shadow .xsmr {
    width: 6px;
    float: left;
    height: 100%;
}
.x-shadow .xsmc {
    float: left;
    height: 100%;
    background: transparent;
}
.x-shadow .xst, .x-shadow .xsb {
    height: 6px;
    overflow: hidden;
    width: 100%;
}
.x-shadow .xsml {
    background: transparent repeat-y 0 0;
}
.x-shadow .xsmr {
    background: transparent repeat-y -6px 0;
}
.x-shadow .xstl {
    background: transparent no-repeat 0 0;
}
.x-shadow .xstc {
    background: transparent repeat-x 0 -30px;
}
.x-shadow .xstr {
    background: transparent repeat-x 0 -18px;
}
.x-shadow .xsbl {
    background: transparent no-repeat 0 -12px;
}
.x-shadow .xsbc {
    background: transparent repeat-x 0 -36px;
}
.x-shadow .xsbr {
    background: transparent repeat-x 0 -6px;
}
.loading-indicator {
    background: no-repeat left;
    padding-left: 20px;
    line-height: 16px;
    margin: 3px;
}
.x-text-resize {
    position: absolute;
    left: -1000px;
    top: -1000px;
    visibility: hidden;
    zoom: 1;
}
.x-drag-overlay {
    width: 100%;
    height: 100%;
    display: none;
    position: absolute;
    left: 0;
    top: 0;
    background-image:url(../images/default/s.gif);
    z-index: 20000;
}
.x-clear {
    clear:both;
    overflow:hidden;
    line-height:0;
    font-size:0;
}
.x-spotlight {
    z-index: 8999;
    position: absolute;
    top:0;
    left:0;
    -moz-opacity: 0.5;
    opacity: .50;
    filter: alpha(opacity=50);
    width:0;
    height:0;
    zoom: 1;
}
#x-history-frame {
    position:absolute;
    top:-1px;
    left:0;
	width:1px;
    height:1px;
    visibility:hidden;
}
#x-history-field {
    position:absolute;
    top:0;
    left:-1px;
	width:1px;
    height:1px;
    visibility:hidden;
}

.x-portlet {
  margin-bottom: 10px;
}

.x-portlet .x-panel-body {
  background-color: white !important;
}

.ext-ie .x-btn-icon .x-btn-center .x-btn-text {
  height: auto;
}

.x-portal-insert div {
  height: 4px;
  font-size: 0px;
  border: 2px dotted blue;
}

.icon-wait {
  background: url(../images/gxt/icons/wait.gif) no-repeat !important;
}

.x-panel-icon {
  padding-left: 20px !important;
}

.x-icon-btn {
  width: 16px;
  height: 16px;
  overflow: hidden;
  background-repeat: no-repeat;
  cursor: pointer;
}

.x-panel-inline-icon {
  margin-top: 0;
}
/* ... */

